<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudok</string>
     <string name="main_title">Android Sudoku</string>
    <string name="continue_label">continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
	<string name="exit_label">Exit</string>
	<string name="action_settings">action settings</string>
	<string name="about_title">About android Sudoku</string>
	<string name="about_text">\ 
	    Sudoku is logic-based number placement puzzle. 
	    Starting with a partially completed 9*9 grid, the
	    objective is to fill the grid so that each
	    row, each column, and each of the 3*3 boxes
	    about text</string>
   

</resources>
